[OSCAR-V] Various modifications to try to get closer from the release oscar-v 1.0.0.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/pkgsrc@8747 18f9d06c-6ae2-0310-8438-938a554feff9

--- a/debian/control
+++ b/debian/control
@@ -7,6 +7,6 @@ Standards-Version: 3.7.2
 
 Package: oscarv
 Architecture: all
-Depends: ${shlibs:Depends}, ${misc:Depends}, liboscar
+Depends: ${shlibs:Depends}, ${misc:Depends}, liboscar, v2m
 Description: OSCAR extension to support system-level virtualization.
  OSCAR extension to support system-level virtualization such as Xen or KVM.
