[oscar-v] Updated package name to comply with svn tree and oscar-packager.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/pkgsrc@9912 18f9d06c-6ae2-0310-8438-938a554feff9

--- a/debian/control
+++ b/debian/control
@@ -1,11 +1,11 @@
-Source: oscarv
+Source: oscar-v
 Section: oscar
 Priority: optional
 Maintainer   : Geoffroy Vallee <valleegr@ornl.gov>
 Build-Depends: debhelper (>= 4.0.0)
 Standards-Version: 3.7.2
 
-Package: oscarv
+Package: oscar-v
 Architecture: all
 Depends: ${shlibs:Depends}, ${misc:Depends}, liboscar, v2m
 Description: OSCAR extension to support system-level virtualization.
