[oscar-v] Fixes for name changes.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/pkgsrc@9922 18f9d06c-6ae2-0310-8438-938a554feff9

--- a/debian/rules
+++ b/debian/rules
@@ -55,8 +55,8 @@ install: build
 	dh_clean -k 
 	dh_installdirs
 
-	# Add here commands to install the package into debian/oscarv.
-	$(MAKE) install DESTDIR=$(CURDIR)/debian/oscarv
+	# Add here commands to install the package into debian/oscar-v.
+	$(MAKE) install DESTDIR=$(CURDIR)/debian/oscar-v
 
 
 # Build architecture-independent files here.
