[pkgsrc/oscar-v] Fix Makefiles.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/pkgsrc@10851 18f9d06c-6ae2-0310-8438-938a554feff9

--- a/bin/Makefile
+++ b/bin/Makefile
@@ -3,8 +3,8 @@ DESTDIR=
 TOPDIR=..
 include $(TOPDIR)/Config.mk
 
-SCRIPTS := oscar-v
-SUBDIRS :=
+SCRIPTS = oscar-v
+SUBDIRS =
 
 doc:
 	install -d -m 0755 $(DESTDIR)/$(MANDIR)/man1/
