Fix secontion and liboscar dependancy

--- a/debian/control
+++ b/debian/control
@@ -1,5 +1,5 @@
 Source: oscar-v
-Section: oscar
+Section: science
 Priority: optional
 Maintainer: Geoffroy Vallee <valleegr@ornl.gov>
 Build-Depends: debhelper (>= 4.0.0)
@@ -7,6 +7,6 @@ Standards-Version: 3.7.2
 
 Package: oscar-v
 Architecture: all
-Depends: ${shlibs:Depends}, ${misc:Depends}, liboscar, v2m
+Depends: ${shlibs:Depends}, ${misc:Depends}, liboscar-server, v2m
 Description: OSCAR extension to support system-level virtualization.
  OSCAR extension to support system-level virtualization such as Xen or KVM.
